<resources>
    <string name="app_name">Aassaan</string>
    <string name="sponsored">SPONSORED</string>
    <string name="cancel">Cancel</string>
    <string name="search_location">Search location by name</string>
    <string name="new_store">New Store</string>
    <string name="action_settings">Settings</string>
    <string name="device_does_not_support_galary">Device does not support galary</string>
    <string name="image_description">image description</string>
    <string name="title_activity_maps">Map</string>
    <string name="logout">Logout</string>
    <string name="points">points</string>
    <string name="count">count</string>
    <string name="total">total</string>
    <string name="facebook_app_id">1006439776072507</string>
    <string name="activity">Activities</string>
    <string name="brkdwnpoints">BreakDown of Points</string>
    <string name="wip">wip</string>
    <string name="server_error">server_error</string>
    <string name="home">Home</string>
    <string name="category">Caterory</string>
    <string name="bookmark">Bookmark</string>
    <string name="recents">More</string>
    <string name="login">Login</string>
    <string name="accounts">Accounts</string>
    <string name="login_account">Login Account</string>
    <string name="network_error">network_error</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_contact_us">ContactUs</string>

    <string name="country_prompt">Select</string>
    <string-array name="country_arrays">
        <item>Select</item>

    </string-array>
</resources>
