<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_red"/>

    <RelativeLayout
        android:id="@+id/main_rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5"
        android:layout_centerInParent="true"

        android:layout_alignParentTop="true">

        <LinearLayout

            android:padding="8dp"
            android:layout_centerInParent="true"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/back_btn"
            android:layout_alignParentLeft="true">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/small_text_size"
                android:layout_gravity="center_vertical"
                android:background="@drawable/back_arrow"/>
        </LinearLayout>
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:id="@+id/search_catagori"
            android:padding="8dp"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="@dimen/small_text_size"
                android:background="@drawable/search"
                android:layout_gravity="center_vertical"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/txt_cat_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="GROFFER"
                    android:textSize="@dimen/outletlistpage_txt_sub_name_txt_size"
                    android:textColor="#9A9A9A"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/red_arrow1"
                    android:layout_toRightOf="@+id/txt_cat_name"
                    android:layout_centerVertical="true"
                    android:id="@+id/arrow" />
                <TextView
                    android:id="@+id/txt_sub_name"
                    android:layout_width="wrap_content"
                    android:textAllCaps="true"
                    android:layout_height="wrap_content"
                    android:text="freshfood"
                    android:singleLine="true"
                    android:gravity="center"
                    android:textSize="@dimen/outletlistpage_txt_sub_name_txt_size"
                    android:layout_toRightOf="@+id/arrow"
                    android:textColor="@color/light_red"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MY PROFILE"

                android:layout_marginBottom="@dimen/half_margin"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:id="@+id/txt_name" />

        </LinearLayout>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8E6E7"

        android:layout_below="@+id/main_rl_top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:id="@+id/filterbtn"
            android:layout_marginLeft="@dimen/outletlistpage_magrig_left"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/RL_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/filterimg"
                android:textColor="@color/light_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Filters"
                android:textColor="#c4171d"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/margin5"
                android:id="@+id/filterlbl"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_red"/>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/outletlistpage_magrig_left"
        android:layout_height="wrap_content"
        android:id="@+id/sponsoredid"
        android:textSize="@dimen/outletlistpage_sponser_txt_size"
        android:textColor="#a6a6a6"
        android:text="@string/sponsored"/>
    <it.sephiroth.android.library.widget.HListView
        android:id="@+id/hlv_sposensered"
        android:layout_width="match_parent"
        android:layout_height="@dimen/outlet_page_hlist_view_height">
    </it.sephiroth.android.library.widget.HListView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:visibility="gone"
        android:textColor="@color/gray_goose"
        android:text="@string/new_store"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_red"/>
    <ListView
        android:id="@+id/lv_outlet_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"></ListView>
    <RelativeLayout
        android:id="@+id/rl_foorte"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f1f1f1"
            android:weightSum="1.0"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/ll_home"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btn_home"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/home_icon"/>
                <ImageView
                    android:id="@+id/btn_home_active"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/home_icon_activer"/>
                <Utils.LightText
                    android:textAllCaps="true"
                    android:textSize="@dimen/tablayout_icons_text_size"
                    android:id="@+id/txt_home"
                    android:layout_gravity="center"
                    android:text="@string/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_categorie"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/small_text_size"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btn_cat"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_categories_hight"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/categories_icon"/>
                <ImageView
                    android:id="@+id/btn_cat_active"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_categories_hight"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/categories_icon_active"/>
                <Utils.LightText
                    android:layout_marginTop="@dimen/tablayout_icons_categories_pading"
                    android:textAllCaps="true"
                    android:textSize="@dimen/tablayout_icons_text_size"
                    android:id="@+id/txt_category"
                    android:layout_gravity="center"
                    android:text="@string/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_bookmark"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"

                android:layout_marginLeft="@dimen/small_text_size"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btn_bookmark"
                    android:layout_width="@dimen/tablayout_bookmark_icons_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/bookmark_icon"/>

                <ImageView
                    android:id="@+id/btn_bookmark_active"
                    android:layout_width="@dimen/tablayout_bookmark_icons_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:background="@drawable/bookmark_icon_active"/>
                <Utils.LightText
                    android:textAllCaps="true"
                    android:textSize="@dimen/tablayout_icons_text_size"
                    android:id="@+id/txt_bookmark"
                    android:layout_gravity="center"
                    android:text="@string/bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_account"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"

                android:layout_marginLeft="@dimen/small_text_size"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btn_account"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:paddingRight="@dimen/half_margin"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/account_icon"/>

                <ImageView
                    android:id="@+id/btn_account_active"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:paddingRight="@dimen/half_margin"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/account_icon_active"/>
                <Utils.LightText
                    android:textAllCaps="true"
                    android:textSize="@dimen/tablayout_icons_text_size"
                    android:id="@+id/txt_account"
                    android:layout_gravity="center"
                    android:text="@string/accounts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_recent"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/small_text_size"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btn_recent"
                    android:layout_width="@dimen/tablayout_more_icons_width_"
                    android:layout_height="@dimen/tablayout_more_icons_hight_"
                    android:paddingRight="@dimen/half_margin"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/recent_icon"/>

                <ImageView
                    android:id="@+id/btn_recent_active"
                    android:layout_width="@dimen/tablayout_more_icons_width_"
                    android:layout_height="@dimen/tablayout_more_icons_hight_"
                    android:paddingRight="@dimen/half_margin"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/recent_icon_active"/>
                <Utils.LightText
                    android:textAllCaps="true"
                    android:textSize="@dimen/tablayout_icons_text_size"
                    android:id="@+id/txt_recents"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/tablayout_more_icons_margin_top_"
                    android:text="@string/recents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>