<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Recent Outlets"
            android:textColor="@color/black_light"
            android:textSize="@dimen/large_text_size_14" />

        <LinearLayout
            android:id="@+id/tv_search_outlet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/recycler_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_foorte"
        android:layout_below="@+id/header"
        android:background="@color/white"
        android:clipToPadding="false" />

    <RelativeLayout
        android:id="@+id/rl_foorte"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f1f1f1"
            android:weightSum="1.0"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/ll_home"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btn_home"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/home_icon"/>
                <ImageView
                    android:id="@+id/btn_home_active"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/home_icon_activer"/>
                <Utils.LightText
                    android:textAllCaps="true"
                    android:textSize="@dimen/tablayout_icons_text_size"
                    android:textColor="@color/text_gray_color"
                    android:id="@+id/txt_home"
                    android:layout_gravity="center"
                    android:text="@string/home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_categorie"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/small_text_size"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btn_cat"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_categories_hight"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/categories_icon"/>
                <ImageView
                    android:id="@+id/btn_cat_active"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_categories_hight"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/categories_icon_active"/>
                <Utils.LightText
                    android:textColor="@color/text_gray_color"
                    android:layout_marginTop="@dimen/tablayout_icons_categories_pading"
                    android:textAllCaps="true"
                    android:textSize="@dimen/tablayout_icons_text_size"
                    android:id="@+id/txt_category"
                    android:layout_gravity="center"
                    android:text="@string/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_bookmark"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"

                android:layout_marginLeft="@dimen/small_text_size"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btn_bookmark"
                    android:layout_width="@dimen/tablayout_bookmark_icons_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/bookmark_icon"/>

                <ImageView
                    android:id="@+id/btn_bookmark_active"
                    android:layout_width="@dimen/tablayout_bookmark_icons_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:background="@drawable/bookmark_icon_active"/>
                <Utils.LightText
                    android:textColor="@color/text_gray_color"
                    android:textAllCaps="true"
                    android:textSize="@dimen/tablayout_icons_text_size"
                    android:id="@+id/txt_bookmark"
                    android:layout_gravity="center"
                    android:text="@string/bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_recent"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"

                android:layout_marginLeft="@dimen/small_text_size"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btn_recent"
                    android:layout_width="@dimen/tablayout_more_icons_width_"
                    android:layout_height="@dimen/tablayout_more_icons_hight_"
                    android:paddingRight="@dimen/half_margin"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/recent_icon"/>

                <ImageView
                    android:id="@+id/btn_recent_active"
                    android:layout_width="@dimen/tablayout_more_icons_width_"
                    android:layout_height="@dimen/tablayout_more_icons_hight_"
                    android:paddingRight="@dimen/half_margin"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/recent_icon_active"/>
                <Utils.LightText
                    android:textColor="@color/lightred"
                    android:textAllCaps="true"
                    android:textSize="@dimen/tablayout_icons_text_size"
                    android:id="@+id/txt_recents"
                    android:layout_marginTop="@dimen/tablayout_more_icons_margin_top_"
                    android:layout_gravity="center"
                    android:text="@string/recents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_account"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"

                android:layout_marginLeft="@dimen/small_text_size"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/btn_account"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:paddingRight="@dimen/half_margin"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/account_icon"/>

                <ImageView
                    android:id="@+id/btn_account_active"
                    android:layout_width="@dimen/tablayout_icons_hight_width"
                    android:layout_height="@dimen/tablayout_icons_hight_width"
                    android:paddingRight="@dimen/half_margin"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/account_icon_active"/>
                <Utils.LightText
                    android:textColor="@color/text_gray_color"
                    android:textAllCaps="true"
                    android:textSize="@dimen/tablayout_icons_text_size"
                    android:id="@+id/txt_account"
                    android:layout_gravity="center"
                    android:text="@string/accounts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/noRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="No Record Found"
        android:textColor="@color/gray"
        android:textSize="30dp"
        android:visibility="gone" />
</RelativeLayout>
